# c-vk-triangle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
resources/shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: main.c
src/lib/: lib_impls.h  others_impl.c
src/lib/vma/: impl.cpp
src/triangle/: descriptors.c  descriptors.h  mesh.c  mesh.h  pipeline.c  pipeline.h  push_constants.c  push_constants.h
src/util/: concat.h  list_helper.h  math.c  math.h  string_list.c  string_list.h
src/vulkan/: common.h  helper.c  helper.h  instance.c  instance.h
src/vulkan/buffer/: buffer.c  buffer.h
src/vulkan/command/: buffer.c  buffer.h  pool.c  pool.h
src/vulkan/context/: context.c  context.h  present_context.c  present_context.h
src/vulkan/depth/: depth_image.c  depth_image.h
src/vulkan/descriptors/: descriptors.c  descriptors.h  layout_builder.c  layout_builder.h  pool_builder.c  pool_builder.h  update_builder.c  update_builder.h
src/vulkan/device/: logical.c  logical.h  physical.c  physical.h  queue_families.c  queue_families.h
src/vulkan/engine/: commands.c  commands.h  engine.c  engine.h  sync.c  sync.h
src/vulkan/framebuffers/: framebuffers.c  framebuffers.h
src/vulkan/image/: image.c  image.h
src/vulkan/instance/: debug.c  debug.h  instance.c  instance.h
src/vulkan/pipeline/: builder.c  builder.h  layout.c  layout.h  layout_builder.c  layout_builder.h  pipeline.c  pipeline.h  vertex_input.c  vertex_input.h
src/vulkan/renderpass/: renderpass.c  renderpass.h
src/vulkan/shader/: module.c  module.h
src/vulkan/surface/: surface.c  surface.h  surface_info.c  surface_info.h
src/vulkan/swapchain/: images.c  images.h  swapchain.c  swapchain.h
src/vulkan/vma/: helper.c  helper.h
